yaml/k8s-1-Basic/9-app-2-shopping-portal/shoppiny-ns copy.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: shoppingportal
    labels:
       name: shoppingportal
