yaml/k8s-1-Basic/9-app-2-shopping-portal/shopping-ingress-aws.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: workshop-ingress
  namespace: shoppingportal
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    alb.ingress.kubernetes.io/subnets: subnet-05ea8630b67fadc35,subnet-06a596c44ee69daa3,subnet-0f3b316de0087896c
spec:
  rules:
  - http:
      paths:
      - path: /ui/*
        backend:
          serviceName: k8uiworkshopservice
          servicePort: 80
      - path: /productms/*
        backend:
          serviceName: productservice
          servicePort: 80
      - path: /productreviewms/*
        backend:
          serviceName: productreviewservice
          servicePort: 80
